--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,81 @@ ul {
   border-radius: 10px;
 }
 
+.skills-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+
+.skills-list__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  row-gap: 20px;
+}
+
+.skills-list__item .progress {
+  width: 400px;
+  height: 25px;
+  margin: auto 35px;
+  background-color: rgba(138, 197, 197, 0.2);
+  border-radius: 20px;
+  position: relative;
+}
+
+.skills-list__item .progress::before {
+  content: "";
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  background-color: rgba(147, 211, 186, 0.4);
+  border-radius: 20px;
+}
+
+.skills-list__item .progress:hover::before {
+  background-color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.skills-list__item .percent-80::before {
+  width: 80%;
+}
+
+.skills-list__item .percent-60::before {
+  width: 60%;
+}
+
+.skills-list__item .html,
+.skills-list__item .css,
+.skills-list__item .js,
+.skills-list__item .java {
+  display: block;
+  width: 45px;
+  height: 45px;
+  opacity: 0.6;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.skills-list__item .html:hover,
+.skills-list__item .css:hover,
+.skills-list__item .js:hover,
+.skills-list__item .java:hover {
+  transform: scale(1.2);
+}
+
+.skills-list__item .html {
+  background: url("../assets/img/svg/html.svg") no-repeat center/contain;
+}
+
+.skills-list__item .css {
+  background: url("../assets/img/svg/css.svg") no-repeat center/contain;
+}
+
+.skills-list__item .js {
+  background: url("../assets/img/svg/js.svg") no-repeat center/contain;
+}
+
 .education .colleges {
   display: flex;
   flex-direction: column;
@@ -435,7 +510,7 @@ ul {
 
 .languages__container {
   background: url("/assets/img/png/map.png") no-repeat center/contain;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
   transition: all 2s ease-out;
 }
 
@@ -444,7 +519,7 @@ ul {
 }
 
 .languages__container:hover {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .languages__container .languages__wrapper {
@@ -459,8 +534,8 @@ ul {
   width: 110px;
   height: 110px;
   padding: 20px;
-  border: 3px solid rgba(0, 0, 0, 0.534);
-  background-color: rgba(161, 161, 161, 0.7);
+  border: 2px solid rgba(0, 0, 0, 0.534);
+  background-color: rgba(114, 114, 114, 0.4);
   border-radius: 50%;
   margin-bottom: 20px;
   text-align: center;
