--- a/style.scss
+++ b/style.scss
@@ -413,6 +413,78 @@ ul {
     &__container {
         @extend .projects__container;
     }
+
+    &-list {
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+
+        &__item {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            row-gap: 20px;
+
+            .progress {
+                width: 400px;
+                height: 25px;
+                margin: auto 35px;
+                background-color: rgba(138, 197, 197, 0.2);
+                border-radius: 20px;
+                position: relative;
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    width: 40%;
+                    height: 100%;
+                    background-color: rgba(147, 211, 186, 0.4);
+                    border-radius: 20px;
+                }
+
+                &:hover::before {
+                    background-color: rgba(0, 0, 0, 0.3);
+                    cursor: pointer;
+                }
+            }
+
+            .percent-80::before {
+                width: 80%;
+            }
+
+            .percent-60::before {
+                width: 60%;
+            }
+
+            .html,
+            .css,
+            .js,
+            .java {
+                display: block;
+                width: 45px;
+                height: 45px;
+                opacity: 0.6;
+                transition: 0.5s ease-in-out;
+                cursor: pointer;
+
+                &:hover {
+                    transform: scale(1.2);
+                }
+            }
+
+            .html {
+                background: url("../assets/img/svg/html.svg") no-repeat center/contain;
+            }
+
+            .css {
+                background: url("../assets/img/svg/css.svg") no-repeat center/contain;
+            }
+
+            .js {
+                background: url("../assets/img/svg/js.svg") no-repeat center/contain;
+            }
+        }
+    }
 }
 
 .education {
@@ -461,7 +533,7 @@ ul {
     &__container {
         @extend .projects__container;
         background: url("/assets/img/png/map.png") no-repeat center/contain;
-        background-color: rgba(0, 0, 0, 0.4);
+        background-color: rgba(0, 0, 0, 0.6);
         transition: all 2s ease-out;
 
         &:hover .language {
@@ -469,7 +541,7 @@ ul {
         }
 
         &:hover {
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: rgba(0, 0, 0, 0.4);
         }
 
         .languages__wrapper {
@@ -483,8 +555,8 @@ ul {
                 width: 110px;
                 height: 110px;
                 padding: 20px;
-                border: 3px solid rgba(0, 0, 0, 0.534);
-                background-color: rgba(161, 161, 161, 0.7);
+                border: 2px solid rgba(0, 0, 0, 0.534);
+                background-color: rgba(114, 114, 114, 0.4);
                 border-radius: 50%;
                 margin-bottom: 20px;
                 text-align: center;
