--- a/style.scss
+++ b/style.scss
@@ -367,36 +367,54 @@ ul {
 
         // taken as a basis ----- to be updated
         .slider {
-            max-width: 90%;
+            background-color: rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4);
+            border-radius: 10px;
+            max-width: 60%;
             position: relative;
             margin: auto;
-            height: 200px;
 
-            .item img {
-                object-fit: cover;
-                width: 100%;
-                height: 200px;
-            }
-
-            .item {
+            &__slide {
                 animation: fade 1.5s linear;
+                border-radius: 10px;
+                padding: 20px 60px;
+
+                img {
+                    object-fit: contain;
+                    width: 100%;
+                    margin: 0 auto;
+                    border-radius: 20px;
+
+                    transition: 0.5s ease;
+
+                    &:hover {
+                        transform: scale(1.02);
+                        box-shadow: 4px 4px 10px 5px rgba(0, 0, 0, 0.5);
+                    }
+                }
             }
 
             .arrow {
                 cursor: pointer;
                 position: absolute;
-                top: 35%;
+                top: 40%;
                 width: auto;
                 font-size: 24px;
                 padding: 16px;
                 transition: 0.5s ease;
 
+                @media screen and (max-width: 910px) {
+                    top: 35%;
+                    font-size: 16px;
+                    padding: 10px;
+                }
+
                 &__prev {
-                    left: 5%;
+                    left: 2%;
                 }
 
                 &__next {
-                    right: 5%;
+                    right: 2%;
                 }
 
                 &__prev:hover,
