--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("/assets/fonts/montserrat-v15-latin-regular.woff") format("woff");
-  src: url("/assets/fonts/montserrat-v15-latin-regular.woff2") format("woff2");
+  src: url("../assets/fonts/montserrat-v15-latin-regular.woff") format("woff");
+  src: url("../assets/fonts/montserrat-v15-latin-regular.woff2") format("woff2");
 }
 
 html {
@@ -528,7 +528,7 @@ ul {
 }
 
 .languages__container {
-  background: url("/assets/img/png/map.png") no-repeat center/contain;
+  background: url("../assets/img/png/map.png") no-repeat center/contain;
   background-color: rgba(0, 0, 0, 0.6);
   transition: all 2s ease-out;
 }
